# SportTaskBot

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
bot/: BotDB.py  docmaster.py  main.py  reboot.py
database/: __init__.py  models.py
docmaster/: __init__.py  docmaster.py
routers/: __init__.py  services.py  start.py  submit.py
services/: __init__.py  service_answer.py  service_selector.py
services/services_implementation/: __init__.py  base_service.py  informatics_service.py
utils/: __init__.py  metaclasses.py
