[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["wasd_64 <wasd.rrre64@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
telebot = "^0.0.5"
sqlalchemy = "^2.0.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
