[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["Nikita Kozlov <nukfeed@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.22"
aiogram = "^3.3.0"
setuptools = "^69.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
